# amber

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  README.md  conanfile.txt  font.tga  geometry.glsl  gitlab-ci.yaml  glot.cpp  hello_triangle.cpp  shader_loader.hpp  vertex.glsl
.github/workflows/: build_and_test.yml  ci.yml  cmake.yml  github-actions.yml
docs/: overview.dia
docs/building/: linux.md  macos.md  windows.md
libs/cpp-tsdb/: CMakeLists.txt  conanfile.txt
libs/cpp-tsdb/example/: example.cpp
libs/cpp-tsdb/include/tsdb/: tsdb.hpp
libs/cpp-tsdb/test/: test.cpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/tsdb/: CMakeLists.txt  example.cpp  test.cpp
pages/: index.html
shaders/: char_frag.glsl  char_vert.glsl  fragment.glsl  geometry.glsl  vertex.glsl
shaders/block/: fragment.glsl  vertex.glsl
shaders/glyph/: fragment.glsl  vertex.glsl
shaders/line/: fragment.glsl
shaders/plot/: fragment.glsl  geometry.glsl
shaders/simple/: fragment.glsl  vertex.glsl
shaders/sprite/: fragment.glsl  vertex.glsl
specs/: user_stories.md
src/: audiofile_plugin.cpp  audiofile_plugin.hpp  audiofile_source.hpp  database.hpp  font.cpp  font.hpp  glot.cpp  graph.cpp  graph.hpp  main.cpp  plot.cpp  plot.hpp  plugin.hpp  plugin_context.hpp  plugin_manager.cpp  plugin_manager.hpp  resources.hpp  shader.cpp  shader_program.cpp  shader_utils.hpp  timeseries.hpp  timeseries_dense.cpp  timeseries_dense.hpp  window.cpp  window.hpp
src/amber/: CMakeLists.txt  audiofile_plugin.cpp  audiofile_plugin.hpp  axis.cpp  axis.hpp  demo.cpp  font.cpp  font.hpp  graph.cpp  graph.hpp  graph_state.hpp  hitbox.cpp  hitbox.hpp  key_controller.hpp  label.cpp  label.hpp  main.cpp  marker.cpp  marker.hpp  plot.cpp  plot.hpp  plugin.hpp  plugin_context.cpp  plugin_context.hpp  plugin_manager.cpp  plugin_manager.hpp  resources.hpp  selection_box.cpp  selection_box.hpp  shader.cpp  shader_program.cpp  shader_utils.hpp  sprite.cpp  sprite.hpp  ui.cpp  ui.hpp  view.cpp  view.hpp  wavegen_plugin.cpp  wavegen_plugin.hpp  (+5 more)
src/amber/bindings/: CMakeLists.txt
src/amber/database/include/database/: chunked_vector.hpp  database.hpp  timeseries.hpp  timeseries_dense.hpp
src/amber/database/src/: database.cpp  timeseries_dense.cpp
src/amber/database/test/: test_chunked_vector.cpp  test_database.cpp  test_timeseries_dense.cpp
src/amber/test/: test_hitbox.cpp  test_transform.cpp  test_view.cpp
src/amber/utils/: hitbox.hpp  transform.hpp
src/fontgen/: CMakeLists.txt  fontgen.cpp  fontgen.hpp  main.cpp
src/glot/: CMakeLists.txt  app_context.cpp  app_context.hpp  audiofile_plugin.cpp  audiofile_plugin.hpp  axis.cpp  axis.hpp  chunked_vector.hpp  database.cpp  database.hpp  demo.cpp  font.cpp  font.hpp  font_material.cpp  font_material.hpp  graph.cpp  graph.hpp  graph_controller.cpp  graph_controller.hpp  graph_renderer_opengl.cpp  graph_renderer_opengl.hpp  graph_state.hpp  graph_utils.hpp  imgui_database_panel.cpp  imgui_database_panel.hpp  imgui_window.cpp  imgui_window.hpp  key_controller.hpp  label.cpp  label.hpp  line_renderer_opengl.cpp  line_renderer_opengl.hpp  main.cpp  marker.cpp  marker.hpp  marker_renderer_opengl.cpp  marker_renderer_opengl.hpp  plot.cpp  plot.hpp  plot_renderer_opengl.cpp  (+36 more)
src/glot/benchmark/: bench_timeseries_dense.cpp  ts.cpp
src/glot/database/: CMakeLists.txt
src/glot/database/benchmark/: bench_timeseries_dense.cpp
src/glot/database/src/: database.cpp
src/glot/database/test/: test_chunked_vector.cpp
src/glot/stb_image/: CMakeLists.txt
src/glot/test/: test_chunked_vector.cpp  test_graph_controller.cpp  test_graph_utils.cpp  test_timeseries_dense.cpp  test_timeseries_sparse.cpp  test_transform.cpp
src/glot/utils/: transform.hpp
